--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="external/bootstrap-4.1.3-dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="external/open-iconic/font/css/open-iconic-bootstrap.css" >
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>RetroTechOnline - Bootstrap Template</title>
 
+    <!-- Import Fonts/Styles -->
+    <link rel="stylesheet" href="external/bootstrap-4.1.3-dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="external/open-iconic/font/css/open-iconic-bootstrap.css" >
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
+    
     <!-- Custom Styles -->
     <link href="css/style.css" rel="stylesheet">
 
@@ -23,7 +27,9 @@
   <body>
     <!-- Static navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">retroTECH Online</a>
+      <a class="navbar-brand" href="#home">
+        <i class="fa fa-barcode GTgold"></i> <span class="retro">retro</span><span class="tech">TECH</span>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,7 +47,6 @@
               <a class="dropdown-item" href="#">Artifact 3</a>
             </div>
           </li>
-          <li><span class="fas fa-home fa-2x" alt="home icon"></span></li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
