#141 Format homepage styles and colors

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <div class="collapse navbar-collapse roboto" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link " href="#">About</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown ">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Collection</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Artifact 1</a>
@@ -56,12 +56,12 @@
     </nav>
     <!-- END Static Navbar -->
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <!-- Main jumbotron -->
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3">Welcome to retroTECH Online!</h1>
-        <p>Hack the past, design the future.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Browse the collection &raquo;</a></p>
+        <h1 class="display-4 roboto">Welcome to <span class="retro">retro</span><span class="tech">TECH</span><span class="retro">Online</span>!</h1>
+        <p class="roboto">Hack the past, design the future.</p>
+        <p><a class="btn btn-warning btn-lg roboto" href="#" role="button">Browse the collection &raquo;</a></p>
       </div>
     </div>
     <!-- END main jumbotron -->
