#141 Replace jumbotron w/ background image card w/ transp

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- Static navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="#home">
         <i class="fa fa-barcode GTgold"></i> <span class="retro">retro</span><span class="tech">TECH</span>
       </a>
@@ -55,15 +55,24 @@
     </nav>
     <!-- END Static Navbar -->
 
-    <!-- Main jumbotron -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1 class="display-4 roboto">Welcome to <span class="retro">retro</span><span class="tech">TECH</span><span class="retro">Online</span>!</h1>
-        <p class="roboto">Hack the past, design the future.</p>
-        <p><a class="btn btn-warning btn-lg roboto" href="#" role="button">Browse the collection &raquo;</a></p>
+    <!-- Main Card-->
+    <div class="card bg-dark text-white border-0 text-center">
+      <img class="card-img rounded-0" src="assets/header_bgGT.jpg" alt="Circuits image">
+      <div class="card-img-overlay transp-banner align-middle">
+        <h1 class="card-title display-4 roboto">Welcome to <span class="retro">retro</span><span class="tech">TECH</span><span class="retro">Online</span>!</h1>
+        <h5 class="card-text display-5 roboto">Hack the past, design the future.</h5>
+        <br>
+        <div class="row justify-content-center">
+          <div class="col-4 col-md-auto">
+            <a class="btn btn-warning btn-lg roboto" href="#" role="button">Browse the collection &raquo;</a>
+          </div>
+          <div class="col-4 col-md-auto">
+            <a class="btn btn-warning btn-lg roboto" href="#" role="button">Learn more &raquo;</a>
+          </div>
+        </div>
       </div>
-    </div>
-    <!-- END main jumbotron -->
+    </div>  
+    <!-- END Main Card --> 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
