#141 Show collections links on hover on navbar

--- a/index.html
+++ b/index.html
@@ -29,17 +29,13 @@
       <a class="navbar-brand" href="#home">
         <i class="fa fa-barcode GTgold"></i> <span class="retro">retro</span><span class="tech">TECH</span>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse roboto" id="navbarsExampleDefault">
+      <div class="collapse navbar-collapse roboto" id="navbar-main">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link " href="#">About</a>
           </li>
           <li class="nav-item dropdown ">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Collection</a>
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown-collection" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Collection</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Artifact 1</a>
               <a class="dropdown-item" href="#">Artifact 2</a>
