--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Collection</a>
+          <li class="nav-item dropdown ">
+            <a class="nav-link dropdown-toggle" href="pages/collection.html" id="dropdown-collection" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Collection</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Artifact 1</a>
               <a class="dropdown-item" href="#">Artifact 2</a>
