#138 Link to home and about pages from menu bar

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <body>
     <!-- Static navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#home">
+      <a class="navbar-brand" href="index.html">
         <i class="fa fa-barcode GTgold"></i> <span class="retro">retro</span><span class="tech">TECH</span>
       </a>
       <div class="collapse navbar-collapse roboto" id="navbar-main">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link " href="#">About</a>
+            <a class="nav-link " href="pages/about.html">About</a>
           </li>
           <li class="nav-item dropdown ">
             <a class="nav-link dropdown-toggle" href="pages/collection.html" id="dropdown-collection" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Collection</a>
