--- a/pages/about.html
+++ b/pages/about.html
@@ -26,13 +26,13 @@
   <body>
     <!-- Static navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#home">
+      <a class="navbar-brand" href="../index.html">
         <i class="fa fa-barcode GTgold"></i> <span class="retro">retro</span><span class="tech">TECH</span>
       </a>
       <div class="collapse navbar-collapse roboto" id="navbar-main">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link " href="#">About</a>
+            <a class="nav-link " href="about.html">About</a>
           </li>
           <li class="nav-item dropdown ">
             <a class="nav-link dropdown-toggle" href="../collection.html" id="dropdown-collection" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Collection</a>
@@ -52,29 +52,24 @@
     <!-- END Static Navbar -->
 
     <!-- Card Group-->
-    <div class="card-group">
-      <div class="card">
-        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+    <div class="card-container border-0 text-center">
+      <div class="card rounded-0">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Lab Location and Hours</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
-      <div class="card">
-        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+      <div class="card rounded-0 bg-warning">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <h5 class="card-title">Contact Us</h5>
+          <p class="card-text">Put a contact form here and listserv signup</p>
         </div>
       </div>
-      <div class="card">
-        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+      <div class="card rounded-0">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <h5 class="card-title">Partners</h5>
+          <p class="card-text">List of partner logos arranged as inline images</p>
+          <p class="card-text"><small class="text-muted">Disclaimer</small></p>
         </div>
       </div>
     </div> 
