#138 Add partner logos to About page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- Main Card-->
     <div class="card bg-dark text-white border-0 text-center">
-      <img class="card-img rounded-0" src="assets/header_bgGT.jpg" alt="Circuits image">
+      <img class="card-img rounded-0" src="img/header_bgGT.jpg" alt="Circuits image">
       <div class="card-img-overlay transp-banner align-middle">
         <h1 class="card-title display-4 roboto">Welcome to <span class="retro">retro</span><span class="tech">TECH</span><span class="retro">Online</span>!</h1>
         <h5 class="card-text display-5 roboto">Hack the past, design the future.</h5>
