--- a/pages/about.html
+++ b/pages/about.html
@@ -53,23 +53,46 @@
 
     <!-- Card Group-->
     <div class="card-container border-0 text-center">
-      <div class="card rounded-0">
+      <div class="card rounded-0 border-0">
         <div class="card-body">
           <h5 class="card-title">Lab Location and Hours</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
-      <div class="card rounded-0 bg-warning">
+      <div class="card rounded-0 border-0 bg-warning">
         <div class="card-body">
           <h5 class="card-title">Contact Us</h5>
           <p class="card-text">Put a contact form here and listserv signup</p>
         </div>
       </div>
-      <div class="card rounded-0">
+      <div class="card rounded-0 border-0">
         <div class="card-body">
           <h5 class="card-title">Partners</h5>
           <p class="card-text">List of partner logos arranged as inline images</p>
-          <p class="card-text"><small class="text-muted">Disclaimer</small></p>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <a href="http://www.library.gatech.edu">
+                  <img src="../img/library.png" alt="Georgia Tech Library" width="240" height="103">
+                </a>
+              </div>
+              <div class="col">
+                <a href="http://www.gamearchaeologylab.com/">
+                  <img src="../img/dm.png" alt="LMC Digital Media Game Archaeology Lab" width="213" height="110">
+                </a>
+              </div>
+              <div class="col">
+                <a href="http://atlhcs.org/">
+                  <img src="../img/ahcs-logo.png" alt="AHCS" width="262" height="83">
+                </a>
+              </div>
+              <div class="col">
+                <a href="http://www.computermuseumofamerica.com/">
+                  <img src="../img/CMOA-Logo-LRG-300.png" width="229" height="128" alt="Computer Museum of America">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div> 
