#138 Embed google calendar in about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -57,6 +57,9 @@
         <div class="card-body">
           <h5 class="card-title">Lab Location and Hours</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <div>
+            <iframe src="https://calendar.google.com/calendar/embed?src=v95jro4j10is3mbdtunn4uebto%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800px" height="400px"></iframe>
+          </div>
         </div>
       </div>
       <div class="card rounded-0 border-0 bg-warning">
