gh-151 Create and link to artifact page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li class="nav-item dropdown ">
             <a class="nav-link dropdown-toggle" href="pages/collection.html" id="dropdown-collection" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Collection</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Artifact 1</a>
+              <a class="dropdown-item" href="pages/artifact.html">Artifact 1</a>
               <a class="dropdown-item" href="#">Artifact 2</a>
               <a class="dropdown-item" href="#">Artifact 3</a>
             </div>
