--- a/pages/artifact.html
+++ b/pages/artifact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>RetroTechOnline - About</title>
+    <title>RetroTechOnline - Artifact View</title>
 
     <!-- Import Fonts/Styles -->
     <link rel="stylesheet" href="../external/bootstrap-4.1.3-dist/css/bootstrap.css"/>
