gh-151 Add second card panel

--- a/pages/artifact.html
+++ b/pages/artifact.html
@@ -53,12 +53,17 @@
 
     <!-- Card Group-->
     <div class="card-container border-0 text-center">
-      <div class="card rounded-0 border-0">
-        <div class="card-body">
-          <h5 class="card-title">Lab Location and Hours</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <div>
-            <iframe src="https://calendar.google.com/calendar/embed?src=v95jro4j10is3mbdtunn4uebto%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800px" height="400px"></iframe>
+      <div class="row">
+        <div class="card rounded-0 border-0">
+          <div class="card-body">
+            <h5 class="card-title">Lab Location and Hours</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+        <div class="card rounded-0 border-0">
+          <div class="card-body">
+            <h5 class="card-title">Second card view</h5>
+            <p class="card-text">Placeholder text.</p>
           </div>
         </div>
       </div>
@@ -67,7 +72,7 @@
           <h5 class="card-title">Contact Us</h5>
           <p class="card-text">Put a contact form here and listserv signup</p>
         </div>
-      </div>
+      </div> 
       <div class="card rounded-0 border-0">
         <div class="card-body">
           <h5 class="card-title">Partners</h5>
