--- a/pages/artifact.html
+++ b/pages/artifact.html
@@ -52,28 +52,43 @@
     <!-- END Static Navbar -->
 
     <!-- Card Group-->
-    <div class="card-container border-0 text-center">
+    <div class="card-container border-0">
       <div class="row">
-        <div class="card rounded-0 border-0">
+        <div class="card rounded-0 border-0 mx-auto col-sm-6" style="width: 500px;">
           <div class="card-body">
-            <h5 class="card-title">Lab Location and Hours</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Item Name</h5>
+            <div class="card-text">
+              <div class="text-center">
+                <a href="#">
+                    <img src="../img/arcade-cabinet.png" alt="Arcade Cabinet" width="238" height="300">
+                  </a>
+              </div>
+              <h6> Creation Date:</h6>
+              <h6>Description:</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
           </div>
         </div>
-        <div class="card rounded-0 border-0">
+        <div class="card rounded-0 border-0 col-sm-6">
           <div class="card-body">
-            <h5 class="card-title">Second card view</h5>
-            <p class="card-text">Placeholder text.</p>
+            <h5 class="card-title">Oral History with Person</h5>
+            <div class="text-center">
+              <a href="#">
+                  <img src="../img/video_player.png" alt="Arcade Cabinet" width="500" height="300">
+                </a>
+            </div>
+            <h6 class="card-text">Transcript:</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </div>
-      <div class="card rounded-0 border-0 bg-warning">
+      <div class="card rounded-0 border-0 bg-warning text-center">
         <div class="card-body">
           <h5 class="card-title">Contact Us</h5>
           <p class="card-text">Put a contact form here and listserv signup</p>
         </div>
       </div> 
-      <div class="card rounded-0 border-0">
+      <div class="card rounded-0 border-0 text-center">
         <div class="card-body">
           <h5 class="card-title">Partners</h5>
           <p class="card-text">List of partner logos arranged as inline images</p>
